--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,18 @@
 @tailwind utilities;
 
 :root {
+  --primaryDarker-color: #0a0a0a;
+  --secondary-color: #7c3aed;
+  --text-color: #f5f3ff;
+  --primaryLighter-color: #191e24;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--text-color);
+  background-color: var(--primaryDarker-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,11 +24,14 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--secondary-color);
+}
+
+a:active {
+  color: var(--secondary-color);
 }
 
 body {
@@ -47,12 +55,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--primaryDarker-color);
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--secondary-color);
 }
 button:focus,
 button:focus-visible {
