--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input {
+  background-color: var(--primaryDarker-color);
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
